# tris

./: .gitignore  404.html  CI.sh  LICENSE  README.md  REFERENCES.md  candidates only.xlsx  index.html  manual_classification.xlsx  mkdocs.yml  pyproject.toml  reclassification.xlsx  requirements.txt  sitemap.xml  trinary.yml
.github/workflows/: docs.yml  pypi-publish.yml  python-package-conda.yml  python-package.yml
data/: all_systems.txt  cpop_diagnostics.txt  estimates.txt
data/combined/: kplr001026032.fits  kplr001026957.fits  kplr001161345.fits  kplr001432214.fits  kplr001433410.fits  kplr001433980.fits  kplr001571511.fits  kplr001572353.fits  kplr001573836.fits  kplr001575690.fits  kplr001722276.fits  kplr001868650.fits  kplr001873513.fits  kplr001995732.fits  kplr002010607.fits  kplr002012362.fits  kplr002019076.fits  kplr002141697.fits  kplr002159783.fits  (+2846 more)
datagen/: README.md  combine.py  download.py  load.sh
docs/: README.md  index.md  mkdocs.yml  requirements.txt
logbooks/: etv_modeling_dev.ipynb
notebooks/: test_pipeline.ipynb  test_plotting.ipynb  test_src.ipynb
pipeline/: __init__.py  core.py  eclipses.py  filter.py  oc.py  periodic.py  preproc.py  util.py
pipelining/: binary_catalogue.csv  cpop.ipynb  data_exploration.ipynb  etv_modeling_dev.ipynb  generate_and_save_plots.py  get_data_statistics.py  get_threshold.py  notebook.ipynb  pipeline idea.py  plot_eclipse_timings.py  plot_lightcurve.py  statistics.csv
search/: search_index.json
src/: README.md  cpop.ipynb  cpop.py  cull_oscillations.py  eclipses.py  get_plausibility_estimates.py  handle_double_eclipses.py  noise_filtering.py  plot_cpops.py  plotting.py
tests/: data_read_test.py  test_io.py
tris/: __init__.py  core.py  eclipses.py  filter.py  io.py  oc.py  periodic.py  plot_all.py  preproc.py  util.py
utils/: expand_mask.py  get_root.py
(+43 files in other folders)
