[tool.poetry]
name = "tris"
version = "0.0.1"
description = "An open-source screening system for Trinary Star Candidates."
license = "MIT"
authors = ["Vikram Ramanathan", "Prannaya Gupta <prannayagupta@programmer.net>", "Yap Yuan Xi", "Ernest Cheong"]
readme = "README.md"
homepage = "https://three-body-analysis.github.io/codebase"
repository = "https://github.com/three-body-analysis/codebase"
keywords = ["NASA", "Kepler", "TESS", "Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.poetry.urls]
"Documentation" = "https://three-body-analysis.github.io/codebase"
"Bug Tracker" = "https://github.com/three-body-analysis/codebase/issues"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "<=1.24"
pandas = ">=1.1.4"
scipy = { version = ">=1.7", python = ">=3.8,<3.11" }
matplotlib = ">=3.1"
astropy = ">=5.0"
requests = ">=2.22.0"
wotan = "=1.10"
wquantiles = "=0.6"
urllib3 = { version = ">=1.23", python = ">=3.8,<4.0" }  # necessary to make requests work on py310
tqdm = ">=4.25.0"


[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4"
mypy = ">=0.930"
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
pytest-remotedata = ">=0.3.2"
pytest-doctestplus = ">=0.8.0"
pytest-xdist = ">=2.1.0"
jupyter = ">=1.0.0"
pylint = ">=2.6.0"

[tool.poetry.group.dev.dependencies]
ghp-import = "^2.1.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    "error::ResourceWarning"
]